kqed_dev4/src/objects/Bios__c.object
<CustomObject>
    <fields>
        <fullName>degree_code__c</fullName>
        <description>Degree Code</description>
        <inlineHelpText>Degree Code</inlineHelpText>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>degree_major__c</fullName>
        <description>Degree Major</description>
        <inlineHelpText>Enter the field for the major i.e. Accounting, Science, Engineering</inlineHelpText>
        <label>Major</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>degree_year__c</fullName>
        <description>Degree Year</description>
        <inlineHelpText>Degree Year</inlineHelpText>
        <label>Degree Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>education_begin_date__c</fullName>
        <description>Education Begin Date</description>
        <inlineHelpText>Education Begin Date</inlineHelpText>
        <label>Education Begin Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>education_end_date__c</fullName>
        <description>Education End Date</description>
        <inlineHelpText>Education End Date</inlineHelpText>
        <label>Education End Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>first_interest_source__c</fullName>
        <label>First Interest Source</label>
        <picklist>
            <picklistValues>
                <fullName>Pledge Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Telephone Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening by Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Poll/Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_interest_source_value__c</fullName>
        <description>First Interest Source</description>
        <inlineHelpText>First Interest Source</inlineHelpText>
        <label>First Interest Source Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_program__c</fullName>
        <label>First Program</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_program_description__c</fullName>
        <label>First Program Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>from_amount__c</fullName>
        <description>From Amount</description>
        <inlineHelpText>From Amount</inlineHelpText>
        <label>From Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_day__c</fullName>
        <description>Gift Day</description>
        <inlineHelpText>Gift Day</inlineHelpText>
        <label>Gift Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_month__c</fullName>
        <description>Gift Month</description>
        <inlineHelpText>Gift Month</inlineHelpText>
        <label>Gift Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_year__c</fullName>
        <description>Gift Year</description>
        <inlineHelpText>Gift Year</inlineHelpText>
        <label>Gift Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>give_date__c</fullName>
        <description>Give Date</description>
        <inlineHelpText>Give Date</inlineHelpText>
        <label>Give Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>giving_description__c</fullName>
        <description>Giving Description</description>
        <inlineHelpText>Giving Description</inlineHelpText>
        <label>Giving Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_code__c</fullName>
        <description>Interest Code</description>
        <inlineHelpText>Interest Code</inlineHelpText>
        <label>Interest</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_code_value__c</fullName>
        <description>Interest Code</description>
        <inlineHelpText>Interest Code</inlineHelpText>
        <label>Interest Code Value</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_comments__c</fullName>
        <label>Interest_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_first_date__c</fullName>
        <description>Interest First Date</description>
        <inlineHelpText>Interest First Date</inlineHelpText>
        <label>Interest First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>interest_last_date__c</fullName>
        <description>Interest Last Date</description>
        <inlineHelpText>Interest Last Date</inlineHelpText>
        <label>Interest Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_interest_source__c</fullName>
        <label>Last Interest Source</label>
        <picklist>
            <picklistValues>
                <fullName>Pledge Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Telephone Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening by Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Poll/Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>last_interest_source_value__c</fullName>
        <description>Last Interest Source</description>
        <inlineHelpText>Last Interest Source</inlineHelpText>
        <label>Last Interest Source Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_program__c</fullName>
        <label>Last Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_program_description__c</fullName>
        <label>Last Program Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name_id__c</fullName>
        <description>Name Id</description>
        <inlineHelpText>Name Id</inlineHelpText>
        <label>Name Id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient__c</fullName>
        <label>Recipient</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>school_code__c</fullName>
        <description>School Name</description>
        <inlineHelpText>Name of school, university, college, community college, continuing education</inlineHelpText>
        <label>School Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_amount__c</fullName>
        <description>To Amount</description>
        <inlineHelpText>To Amount</inlineHelpText>
        <label>To Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SingleRecord</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Alan Bloom</value>
        </filters>
        <label>Single Record</label>
    </listViews>
    <nameField>
        <displayFormat>Bio-{00000000}</displayFormat>
        <label>Bio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bios</pluralLabel>
    <recordTypes>
        <fullName>Affiliation</fullName>
        <active>true</active>
        <label>Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s awards from the university or external organization(s)</description>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>BlackBaud_Ratings</fullName>
        <active>true</active>
        <label>BlackBaud Ratings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Board_Trustee</fullName>
        <active>true</active>
        <label>Board/Trustee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charitable_Giving</fullName>
        <active>true</active>
        <description>Giving amount to other non-profits</description>
        <label>Charitable Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s employment history</description>
        <label>Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s financial information and/or history</description>
        <label>Financial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interest</fullName>
        <active>true</active>
        <label>Interest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s Personal Profile.</description>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s membership in internal and/or external organization(s)</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rating</fullName>
        <active>true</active>
        <label>Rating/Closeness</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteering</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s past, present and/or future volunteering activities</description>
        <label>Volunteering</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>